--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
             
     </div>
     <h1 style="text-align: center;">Riley3132's Website</h1>
+    <div class="about-section">
+        <h2 style="text-align: center;">About</h2>
+        <p>Hello, this website is dedicated to my channel. My channel is focused on gaming and some projects for the future. Like this website it will be dedicated to my videos and my projects. My projects will be coding based or gaming based. For my videos it is the exact same. I hope you think of this website as a storage for my youtube channel.</p>
+        <div>
+            <h3>Video Ideas go to: riley31321@outlook.com</h3>
+        </div>
+    </div>
 
+    <div class="info">
+        <a href="href=https://www.youtube.com/channel/UC6i17ONS9hoNCCnBzQdG-Mw">youtube</a>
+    </div>
 </body>
 </html>
